Make a starting point

--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,63 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="">
+  <head>
+    <meta charset="utf-8" />
+    <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-<head>
-  <meta charset="utf-8">
-  <title></title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
+    <!-- See https://github.com/h5bp/html5-boilerplate for details -->
 
-<body>
-  test1
-</body>
+    <!-- see https://github.com/h5bp/html5-boilerplate/blob/fd9f88e846a409088e81292b24ac74a53e86c693/src/doc/html.md#web-app-manifest -->
+    <link rel="manifest" href="site.webmanifest" />
+    <link rel="apple-touch-icon" href="icon.png" />
 
+    <!-- Place favicon.ico in the root directory -->
+
+    <link rel="stylesheet" href="css/main.css" />
+    <script defer src="js/main.js"></script>
+
+    <!-- see https://github.com/h5bp/html5-boilerplate/blob/0ebf00b4c24ea4e27fdb63ff312740f3b6aa14fe/dist/doc/extend.md#theme-color -->
+    <meta name="theme-color" content="#fafafa" />
+  </head>
+
+  <body>
+    <div class="wrapper">
+      <div class="sidebar" tabindex="-1" aria-labelledby="sidebar">
+        <div class="sidebar__head">
+          <h4 class="logo fw-light">
+            Photos
+            <button
+              type="button"
+              class="js-sidebar-toggle sidebar__close btn-lg btn-close"
+              aria-label="Close"
+            ></button>
+          </h4>
+        </div>
+
+        <div class="sidebar__body">
+          <div class="navigation list-group list-group-flush">
+            <a
+              href="#"
+              class="navigation__item nav-side-item list-group-item list-group-item-action"
+              aria-current="true"
+              >Page 1</a
+            >
+            <a
+              href="#"
+              class="navigation__item nav-side-item list-group-item list-group-item-action"
+              >Page 2</a
+            >
+            <a
+              href="/accounts/logout"
+              class="navigation__item nav-side-item list-group-item list-group-item-action"
+              >Logout</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="sidebar-backdrop"></div>
+      <div class="sidebar-dumb-mq-tester"></div>
+      <main class="main"></main>
+    </div>
+  </body>
 </html>
