--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,7 @@
     <!-- Place favicon.ico in the root directory -->
 
     <link rel="stylesheet" href="css/main.css" />
+    <script defer src="../node_modules/pig.js/src/pig.min.js"></script>
     <script defer src="js/main.js"></script>
 
     <!-- see https://github.com/h5bp/html5-boilerplate/blob/0ebf00b4c24ea4e27fdb63ff312740f3b6aa14fe/dist/doc/extend.md#theme-color -->
@@ -22,42 +23,142 @@
 
   <body>
     <div class="wrapper">
-      <div class="sidebar" tabindex="-1" aria-labelledby="sidebar">
-        <div class="sidebar__head">
-          <h4 class="logo fw-light">
-            Photos
+      <header class="js-search-header header">
+        <div class="row">
+          <div class="header__logo col">
+            <button
+              type="button"
+              class="js-sidebar-toggle header__open-sidebar btn-menu btn-lg btn"
+              aria-controls="sidebar"
+            >
+              <span class="visually-hidden">Open menu</span>
+            </button>
+            <!--<button type="button" class="js-sidebar-toggle header__open-sidebar btn-menu btn btn-outline-secondary" aria-controls="sidebar">
+              <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"></path>
+              </svg>
+              <span class="visually-hidden">Open menu</span>
+            </button>-->
+            <a class="logo btn-lg btn" href="#">Photos</a>
+          </div>
+          <div class="header__search col">
+            <form action="#" class="js-search search">
+              <div class="js-search__field search__field">
+                <button type="button" class="js-search__field-toggle search__field-hide btn btn-lg btn-outline-secondary">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="26" height="26" fill="currentColor" class="bi bi-arrow-left-short" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M12 8a.5.5 0 0 1-.5.5H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5a.5.5 0 0 1 .5.5z"></path>
+                  </svg>
+                  <span class="visually-hidden">Go back</span>
+                </button>
+                <input
+                  class="js-search__input search__input form-control form-control-lg"
+                  type="text"
+                  placeholder="Search..."
+                />
+                <div class="js-search__suggest search__suggest list-group list-group-flush">
+                  <a
+                    href="#"
+                    tabindex="-1"
+                    class="js-search__suggest-item search__suggest-item list-group-item list-group-item-action"
+                  >
+                    Suggestion 1
+                  </a>
+                  <a
+                    href="#"
+                    tabindex="-1"
+                    class="js-search__suggest-item search__suggest-item list-group-item list-group-item-action"
+                  >
+                    Suggestion Suggestion Suggestion Suggestion Suggestion Suggestion
+                  </a>
+                  <a
+                    href="#"
+                    tabindex="-1"
+                    class="js-search__suggest-item search__suggest-item list-group-item list-group-item-action"
+                  >
+                    Suggestion 2
+                  </a>
+                </div>
+              </div>
+              <button type="button" class="js-search__field-toggle search__field-show btn btn-lg btn-outline-secondary">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="20"
+                  height="20"
+                  fill="currentColor"
+                  class="bi bi-search"
+                  viewBox="0 0 16 16"
+                >
+                  <path
+                    d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"
+                  ></path>
+                </svg>
+                <span class="visually-hidden">Button</span>
+              </button>
+              <div class="search-dumb-mq-tester"></div>
+            </form>
+          </div>
+          <div class="header__actions col">
+            <label
+              class="js-upload header__action-btn btn btn-lg btn-outline-secondary"
+            >
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                width="26"
+                height="26"
+                fill="currentColor"
+                class="bi bi-cloud-upload"
+                viewBox="0 0 16 16"
+              >
+                <path
+                  fill-rule="evenodd"
+                  d="M4.406 1.342A5.53 5.53 0 0 1 8 0c2.69 0 4.923 2 5.166 4.579C14.758 4.804 16 6.137 16 7.773 16 9.569 14.502 11 12.687 11H10a.5.5 0 0 1 0-1h2.688C13.979 10 15 8.988 15 7.773c0-1.216-1.02-2.228-2.313-2.228h-.5v-.5C12.188 2.825 10.328 1 8 1a4.53 4.53 0 0 0-2.941 1.1c-.757.652-1.153 1.438-1.153 2.055v.448l-.445.049C2.064 4.805 1 5.952 1 7.318 1 8.785 2.23 10 3.781 10H6a.5.5 0 0 1 0 1H3.781C1.708 11 0 9.366 0 7.318c0-1.763 1.266-3.223 2.942-3.593.143-.863.698-1.723 1.464-2.383z"
+                ></path>
+                <path
+                  fill-rule="evenodd"
+                  d="M7.646 4.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707V14.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3z"
+                ></path>
+              </svg>
+              <span class="header__action-btn__txt">Upload</span>
+              <input class="js-upload__input" type="file" multiple hidden>
+            </label>
+          </div>
+        </div>
+      </header>
+      <div class="content">
+        <aside class="sidebar" tabindex="-1" aria-labelledby="sidebar">
+          <div class="sidebar__head">
             <button
               type="button"
               class="js-sidebar-toggle sidebar__close btn-lg btn-close"
               aria-label="Close"
             ></button>
-          </h4>
-        </div>
-
-        <div class="sidebar__body">
-          <div class="navigation list-group list-group-flush">
-            <a
-              href="#"
-              class="navigation__item nav-side-item list-group-item list-group-item-action"
-              aria-current="true"
-              >Page 1</a
-            >
-            <a
-              href="#"
-              class="navigation__item nav-side-item list-group-item list-group-item-action"
-              >Page 2</a
-            >
-            <a
-              href="/accounts/logout"
-              class="navigation__item nav-side-item list-group-item list-group-item-action"
-              >Logout</a
-            >
           </div>
-        </div>
+          <div class="sidebar__body scrollbar">
+            <div class="navigation list-group list-group-flush">
+              <span class="active navigation__item list-group-item" aria-current="true">
+                My photos
+              </span>
+              <a href="#" class="navigation__item list-group-item list-group-item-action">
+                My tags
+              </a>
+              <a href="#" class="navigation__item list-group-item list-group-item-action">
+                Trash
+              </a>
+              <a
+                href="/accounts/logout"
+                class="navigation__item list-group-item list-group-item-action"
+              >
+                Logout
+              </a>
+            </div>
+          </div>
+        </aside>
+        <div class="sidebar-backdrop"></div>
+        <div class="sidebar-dumb-mq-tester"></div>
+        <main class="main">
+          <div id="pig" class="gallery"></div>
+        </main>
       </div>
-      <div class="sidebar-backdrop"></div>
-      <div class="sidebar-dumb-mq-tester"></div>
-      <main class="main"></main>
     </div>
   </body>
 </html>
