--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
     <!-- Place favicon.ico in the root directory -->
 
     <link rel="stylesheet" href="css/main.css" />
-    <script defer src="../node_modules/pig.js/src/pig.min.js"></script>
+    <script defer src="js/vendor/pig.min.js"></script>
     <script defer src="js/main.js"></script>
 
     <!-- see https://github.com/h5bp/html5-boilerplate/blob/0ebf00b4c24ea4e27fdb63ff312740f3b6aa14fe/dist/doc/extend.md#theme-color -->
