Make upload button focusable, minor fix

--- a/src/index.html
+++ b/src/index.html
@@ -99,6 +99,7 @@
           </div>
           <div class="header__actions col">
             <label
+              tabindex="0"
               class="js-upload header__action-btn btn btn-lg btn-outline-secondary"
             >
               <svg
