Use `title` for icon buttons

--- a/src/image-view.html
+++ b/src/image-view.html
@@ -24,7 +24,7 @@
       <div class="image-view">
         <div class="image-view__toolbar row">
           <div class="image-view__toolbar-back col">
-            <button type="button" class="js-image-view__back btn btn-lg btn-outline-secondary">
+            <button title="Go back" type="button" class="js-image-view__back btn btn-lg btn-outline-secondary">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="24"
@@ -42,14 +42,14 @@
             </button>
           </div>
           <div class="image-view__toolbar-aside col">
-            <!--            <button type="button" class="js-image-view__info btn btn-lg btn-outline-secondary">-->
+            <!--            <button title="See image details" type="button" class="js-image-view__info btn btn-lg btn-outline-secondary">-->
             <!--              <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-info-circle" viewBox="0 0 16 16">-->
             <!--                <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14zm0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16z"></path>-->
             <!--                <path d="m8.93 6.588-2.29.287-.082.38.45.083c.294.07.352.176.288.469l-.738 3.468c-.194.897.105 1.319.808 1.319.545 0 1.178-.252 1.465-.598l.088-.416c-.2.176-.492.246-.686.246-.275 0-.375-.193-.304-.533L8.93 6.588zM9 4.5a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"></path>-->
             <!--              </svg>-->
             <!--              <span class="visually-hidden">See details</span>-->
             <!--            </button>-->
-            <button type="button" class="js-image-view__share btn btn-lg btn-outline-secondary">
+            <button title="Share image" type="button" class="js-image-view__share btn btn-lg btn-outline-secondary">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="24"
@@ -64,7 +64,7 @@
               </svg>
               <span class="visually-hidden">Share</span>
             </button>
-            <button type="button" class="js-image-view__download btn btn-lg btn-outline-secondary">
+            <button title="Download image" type="button" class="js-image-view__download btn btn-lg btn-outline-secondary">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="24"
@@ -82,7 +82,7 @@
               </svg>
               <span class="visually-hidden">Download</span>
             </button>
-            <button type="button" class="js-image-view__delete btn btn-lg btn-outline-secondary">
+            <button title="Delete image" type="button" class="js-image-view__delete btn btn-lg btn-outline-secondary">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="24"
