--- a/src/index.html
+++ b/src/index.html
@@ -25,6 +25,7 @@
         <div class="row">
           <div class="header__logo col">
             <button
+              title="Open menu"
               type="button"
               class="js-sidebar-toggle header__open-sidebar btn-menu btn-lg btn"
               aria-controls="sidebar"
@@ -37,6 +38,7 @@
             <form action="#" class="js-search search">
               <div class="js-search__field search__field">
                 <button
+                  title="Hide search"
                   type="button"
                   class="js-search__field-toggle search__field-hide btn btn-lg btn-outline-secondary"
                 >
@@ -85,6 +87,7 @@
                 </div>
               </div>
               <button
+                title="Show search"
                 type="button"
                 class="js-search__field-toggle search__field-show btn btn-lg btn-outline-secondary"
               >
@@ -106,7 +109,7 @@
             </form>
           </div>
           <div class="header__actions col">
-            <label class="js-upload upload header__action-btn btn btn-lg btn-outline-secondary">
+            <label title="Upload" class="js-upload upload header__action-btn btn btn-lg btn-outline-secondary">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="26"
@@ -134,6 +137,7 @@
         <aside class="sidebar" tabindex="-1" aria-labelledby="sidebar">
           <div class="sidebar__head">
             <button
+              title="Close menu"
               type="button"
               class="js-sidebar-toggle sidebar__close btn-lg btn-close"
               aria-label="Close"
