--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
 
     <!-- Place favicon.ico in the root directory -->
 
-    <link rel="stylesheet" href="css/main.css" />
+    <link rel="stylesheet" href="css/bundle.css" />
 
     <!-- see https://github.com/h5bp/html5-boilerplate/blob/0ebf00b4c24ea4e27fdb63ff312740f3b6aa14fe/dist/doc/extend.md#theme-color -->
     <meta name="theme-color" content="#fafafa" />
@@ -22,126 +22,193 @@
   <body>
     <div class="wrapper">
       <header class="js-search-header header">
-        <div class="row">
-          <div class="header__logo col">
-            <button
-              title="Open menu"
-              type="button"
-              class="js-sidebar-toggle header__open-sidebar btn-menu btn-lg btn"
-              aria-controls="sidebar"
-            >
-              <span class="visually-hidden">Open menu</span>
-            </button>
-            <a class="logo btn-lg btn" href="#">Photos</a>
-          </div>
-          <div class="header__search col">
-            <form action="#" class="js-search search">
-              <div class="js-search__field search__field">
-                <button
-                  title="Hide search"
-                  type="button"
-                  class="js-search__field-toggle search__field-hide btn btn-lg btn-outline-secondary"
-                >
-                  <svg
-                    xmlns="http://www.w3.org/2000/svg"
-                    width="26"
-                    height="26"
-                    fill="currentColor"
-                    class="bi bi-arrow-left-short"
-                    viewBox="0 0 16 16"
-                  >
-                    <path
-                      fill-rule="evenodd"
-                      d="M12 8a.5.5 0 0 1-.5.5H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5a.5.5 0 0 1 .5.5z"
-                    ></path>
-                  </svg>
-                  <span class="visually-hidden">Go back</span>
-                </button>
-                <input
-                  class="js-search__input search__input form-control form-control-lg"
-                  type="text"
-                  placeholder="Search..."
-                />
-                <div class="js-search__suggest search__suggest list-group list-group-flush">
-                  <a
-                    href="#"
-                    tabindex="-1"
-                    class="js-search__suggest-item search__suggest-item list-group-item list-group-item-action"
-                  >
-                    Suggestion 1
-                  </a>
-                  <a
-                    href="#"
-                    tabindex="-1"
-                    class="js-search__suggest-item search__suggest-item list-group-item list-group-item-action"
-                  >
-                    Suggestion Suggestion Suggestion Suggestion Suggestion Suggestion
-                  </a>
-                  <a
-                    href="#"
-                    tabindex="-1"
-                    class="js-search__suggest-item search__suggest-item list-group-item list-group-item-action"
-                  >
-                    Suggestion 2
-                  </a>
-                </div>
-              </div>
+        <div class="header__slot_logo header__slot">
+          <button
+            title="Open menu"
+            type="button"
+            class="js-sidebar-toggle header__open-sidebar btn-menu btn-lg btn"
+            data-sidebar="#content-sidebar"
+            aria-controls="sidebar"
+          >
+            <span class="visually-hidden">Open menu</span>
+          </button>
+          <a class="logo btn-lg btn" href="#">Photos</a>
+        </div>
+        <div class="header__slot_search header__slot">
+          <!--
+            Search by image, and general images upload:
+
+            1. Mobile devices require a button which activates a system file picker, because it's the only way to upload files there
+            2. It isn't possible to reliably detect mobile devices. Touch support and screen size aren't
+            reliable signs of a mobile device like iPhone (touch can be present on desktop,
+            screen size doesn't signify anything except a screen size, UA sniffing is fragile). That's the point of a whole mobile-first movement:
+            can't detect mobile, so design everything with a mobile in mind by default
+            3. Because of 1 and 2, we have a button to pick an image for a search everywhere, including desktop
+            4. Adding yet another button to trigger a separate drag-n-drop for image search (and again everywhere, because we can't reliably distinguish a mobile device)
+            looks like a bad idea
+
+            So it comes to this:
+            - we have 2 buttons, each triggering a system file picker: one for image search, another for files upload, which are the only working things on mobile
+            - we also have 2 drop zones for drag-n-drop: one for image search, another for files upload
+
+            That's how I implemented it, but feel free to propose alternatives.
+          -->
+          <form action="#" class="js-search search">
+            <div class="js-search__field search__field">
               <button
-                title="Show search"
+                title="Hide search"
                 type="button"
-                class="js-search__field-toggle search__field-show btn btn-lg btn-outline-secondary"
+                class="js-search__toggle search__infield-action search__infield-action_hide btn btn-lg"
               >
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
-                  width="20"
-                  height="20"
+                  width="26"
+                  height="26"
                   fill="currentColor"
-                  class="bi bi-search"
+                  class="bi bi-arrow-left-short"
                   viewBox="0 0 16 16"
                 >
                   <path
-                    d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"
+                    fill-rule="evenodd"
+                    d="M12 8a.5.5 0 0 1-.5.5H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5a.5.5 0 0 1 .5.5z"
                   ></path>
                 </svg>
-                <span class="visually-hidden">Button</span>
+                <span class="visually-hidden">Go back</span>
               </button>
-              <div class="search-dumb-mq-tester"></div>
-            </form>
-          </div>
-          <div class="header__actions col">
-            <label title="Upload" class="js-upload upload header__action-btn btn btn-lg btn-outline-secondary">
+              <input
+                class="js-search__input search__input form-control form-control-lg"
+                type="text"
+                placeholder="Search..."
+                autocomplete="off"
+              />
+              <label
+                tabindex="-1"
+                title="Search by image"
+                class="search__infield-action search__infield-action_image-search button-file btn btn-lg"
+              >
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="26"
+                  height="26"
+                  fill="currentColor"
+                  class="bi bi-camera"
+                  viewBox="0 0 16 16"
+                >
+                  <path
+                    d="M15 12a1 1 0 0 1-1 1H2a1 1 0 0 1-1-1V6a1 1 0 0 1 1-1h1.172a3 3 0 0 0 2.12-.879l.83-.828A1 1 0 0 1 6.827 3h2.344a1 1 0 0 1 .707.293l.828.828A3 3 0 0 0 12.828 5H14a1 1 0 0 1 1 1v6zM2 4a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2h-1.172a2 2 0 0 1-1.414-.586l-.828-.828A2 2 0 0 0 9.172 2H6.828a2 2 0 0 0-1.414.586l-.828.828A2 2 0 0 1 3.172 4H2z"
+                  />
+                  <path
+                    d="M8 11a2.5 2.5 0 1 1 0-5 2.5 2.5 0 0 1 0 5zm0 1a3.5 3.5 0 1 0 0-7 3.5 3.5 0 0 0 0 7zM3 6.5a.5.5 0 1 1-1 0 .5.5 0 0 1 1 0z"
+                  />
+                </svg>
+                <span class="visually-hidden">Search by image</span>
+                <input class="js-search__image-input button-file__input" type="file" />
+              </label>
+              <div class="js-search__suggest search__suggest">
+                <div class="search__suggest-content scrollbar">
+                  <div class="list-group list-group-flush">
+                    <a
+                      data-suggestion-id="1"
+                      href="#"
+                      tabindex="-1"
+                      class="js-search__suggest-item search__suggest-item list-group-item list-group-item-action"
+                    >
+                      Suggestion 1
+                    </a>
+                    <a
+                      data-suggestion-id="2"
+                      href="#"
+                      tabindex="-1"
+                      class="js-search__suggest-item search__suggest-item list-group-item list-group-item-action"
+                    >
+                      Suggestion Suggestion Suggestion Suggestion Suggestion Suggestion
+                    </a>
+                    <a
+                      data-suggestion-id="3"
+                      href="#"
+                      tabindex="-1"
+                      class="js-search__suggest-item search__suggest-item list-group-item list-group-item-action"
+                    >
+                      Suggestion 2
+                    </a>
+                    <a
+                      data-suggestion-id="4"
+                      href="#"
+                      tabindex="-1"
+                      class="js-search__suggest-item search__suggest-item list-group-item list-group-item-action"
+                    >
+                      Suggestion 4
+                    </a>
+                    <a
+                      data-suggestion-id="5"
+                      href="#"
+                      tabindex="-1"
+                      class="js-search__suggest-item search__suggest-item list-group-item list-group-item-action"
+                    >
+                      Suggestion 5
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <button
+              title="Show search"
+              type="button"
+              class="js-search__toggle search__field-show btn btn-lg"
+            >
               <svg
                 xmlns="http://www.w3.org/2000/svg"
-                width="26"
-                height="26"
+                width="20"
+                height="20"
                 fill="currentColor"
-                class="bi bi-cloud-upload"
+                class="bi bi-search"
                 viewBox="0 0 16 16"
               >
                 <path
-                  fill-rule="evenodd"
-                  d="M4.406 1.342A5.53 5.53 0 0 1 8 0c2.69 0 4.923 2 5.166 4.579C14.758 4.804 16 6.137 16 7.773 16 9.569 14.502 11 12.687 11H10a.5.5 0 0 1 0-1h2.688C13.979 10 15 8.988 15 7.773c0-1.216-1.02-2.228-2.313-2.228h-.5v-.5C12.188 2.825 10.328 1 8 1a4.53 4.53 0 0 0-2.941 1.1c-.757.652-1.153 1.438-1.153 2.055v.448l-.445.049C2.064 4.805 1 5.952 1 7.318 1 8.785 2.23 10 3.781 10H6a.5.5 0 0 1 0 1H3.781C1.708 11 0 9.366 0 7.318c0-1.763 1.266-3.223 2.942-3.593.143-.863.698-1.723 1.464-2.383z"
-                ></path>
-                <path
-                  fill-rule="evenodd"
-                  d="M7.646 4.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707V14.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3z"
+                  d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"
                 ></path>
               </svg>
-              <span class="header__action-btn__txt">Upload</span>
-              <input class="js-upload__input upload__input" type="file" multiple />
-            </label>
-          </div>
+              <span class="visually-hidden">Button</span>
+            </button>
+            <div class="search-dumb-mq-tester"></div>
+          </form>
+        </div>
+        <div class="header__slot_actions header__slot">
+          <label title="Upload" class="js-upload header__action-btn button-file btn btn-lg">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="26"
+              height="26"
+              fill="currentColor"
+              class="bi bi-cloud-upload"
+              viewBox="0 0 16 16"
+            >
+              <path
+                fill-rule="evenodd"
+                d="M4.406 1.342A5.53 5.53 0 0 1 8 0c2.69 0 4.923 2 5.166 4.579C14.758 4.804 16 6.137 16 7.773 16 9.569 14.502 11 12.687 11H10a.5.5 0 0 1 0-1h2.688C13.979 10 15 8.988 15 7.773c0-1.216-1.02-2.228-2.313-2.228h-.5v-.5C12.188 2.825 10.328 1 8 1a4.53 4.53 0 0 0-2.941 1.1c-.757.652-1.153 1.438-1.153 2.055v.448l-.445.049C2.064 4.805 1 5.952 1 7.318 1 8.785 2.23 10 3.781 10H6a.5.5 0 0 1 0 1H3.781C1.708 11 0 9.366 0 7.318c0-1.763 1.266-3.223 2.942-3.593.143-.863.698-1.723 1.464-2.383z"
+              ></path>
+              <path
+                fill-rule="evenodd"
+                d="M7.646 4.146a.5.5 0 0 1 .708 0l3 3a.5.5 0 0 1-.708.708L8.5 5.707V14.5a.5.5 0 0 1-1 0V5.707L5.354 7.854a.5.5 0 1 1-.708-.708l3-3z"
+              ></path>
+            </svg>
+            <span class="header__action-btn__txt">Upload</span>
+            <input class="js-upload__input button-file__input" type="file" multiple />
+          </label>
         </div>
       </header>
       <div class="content">
-        <aside class="sidebar" tabindex="-1" aria-labelledby="sidebar">
+        <aside id="content-sidebar" class="js-content-sidebar sidebar" tabindex="-1" aria-labelledby="sidebar">
           <div class="sidebar__head">
             <button
               title="Close menu"
               type="button"
               class="js-sidebar-toggle sidebar__close btn-lg btn-close"
+              data-sidebar="#content-sidebar"
               aria-label="Close"
-            ></button>
+            >
+              <span class="visually-hidden">Close menu</span>
+            </button>
           </div>
           <div class="sidebar__body scrollbar">
             <div class="navigation list-group list-group-flush">
@@ -162,18 +229,18 @@
               </a>
             </div>
           </div>
+          <div class="overlaying-sidebar-mq-test-elem"></div>
         </aside>
         <div class="sidebar-backdrop"></div>
-        <div class="sidebar-dumb-mq-tester"></div>
         <main class="main">
           <div id="pig" class="gallery"></div>
         </main>
       </div>
+      <div class="drop-target"></div>
     </div>
 
     <script src="js/vendor/pig.min.js"></script>
-    <script src="js/vendor/tagify.min.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/bundle.js"></script>
     <script>
       const imageData = [
         { filename: '100', aspectRatio: 1.777 },
@@ -362,7 +429,9 @@
       };
 
       const pig = new Pig(imageData, options).enable();
-    </script>
 
+      // WARNING: this is required to fix `pigjs` bug, use after each `Pig` initialisation
+      window.dispatchEvent(new Event('resize'));
+    </script>
   </body>
 </html>
